# AiR

./: .gitignore  Cargo.toml  README-zh-CN.md  README.md  build.rs  install-dev.sh  rust-toolchain.toml
.github/: FUNDING.yml  create-dmg  dependabot.yml
.github/workflows/: checks.yml  pages.yml  release.yml  staging.yml
.maintain/: create-dmg  install-dev
asset/: icon.icns
demo/: demo.txt
dev/: text.txt
src/: air.rs  component.rs  data.rs  error.rs  hotkey.rs  main.rs  os.rs  preference.rs  service.rs  state.rs  ui.rs  util.rs  widget.rs
src/component/: audio.rs  function.rs  fundamental.rs  hotkey.rs  keyboard.rs  net.rs  openai.rs  os.rs  quote.rs  quoter.rs  setting.rs  timer.rs  tokenizer.rs  util.rs
src/component/fundamental/: http.rs
src/component/os/: macos.rs  unix.rs  windows.rs
src/component/setting/: fallback.rs  language.rs
src/data/: main.rs  setting.rs
src/os/: macos.rs  windows.rs
src/service/: audio.rs  chat.rs  hotkey.rs  keyboard.rs  quoter.rs
src/ui/: main.rs  panel.rs  preference.rs  util.rs
src/ui/panel/: chat.rs  setting.rs  status.rs  tabs.rs
