[package]
authors     = ["Xavier Lau <xavier@inv.cafe>"]
description = "AI with Rust."
edition     = "2021"
homepage    = "https://hack.ink/air"
license     = "GPL-3.0"
name        = "air"
readme      = "README.md"
repository  = "https://github.com/hack-ink/air"
version     = "0.1.0"

[package.metadata.bundle]
icon       = ["asset/icon.png"]
identifier = "ink.hack.AiR"
name       = "AiR"

[profile.ci-dev]
incremental = false
inherits    = "dev"

[profile.ci-release]
inherits = "release"
lto      = true

[features]
default = []
dev     = []

[dependencies]
# crates.io
app_dirs2          = { version = "2.5" }
arboard            = { version = "3.4" }
async-openai       = { version = "0.23" }
color-eyre         = { version = "0.6" }
eframe             = { version = "0.28", features = ["persistence"] }
egui_extras        = { version = "0.28", features = ["svg"] }
enigo              = { version = "0.2" }
futures            = { version = "0.3" }
global-hotkey      = { version = "0.5" }
parking_lot        = { version = "0.12" }
reqwew             = { version = "0.2" }
rodio              = { version = "0.19" }
serde              = { version = "1.0", features = ["derive"] }
thiserror          = { version = "1.0" }
tokio              = { version = "1.38", features = ["rt-multi-thread"] }
toml               = { version = "0.8" }
tracing            = { version = "0.1" }
tracing-appender   = { version = "0.2" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2-app-kit    = { version = "0.2", features = ["NSApplication", "NSResponder", "NSRunningApplication", "NSWindow"] }
objc2-foundation = { version = "0.2" }
# accessibility     = { version = "0.1" }
# accessibility-sys = { version = "0.1" }
# core-foundation   = { version = "0.9" }
# objc2             = { version = "0.5" }
