[package]
authors     = ["Xavier Lau <xavier@inv.cafe>"]
build       = "build.rs"
description = "AI with Rust."
edition     = "2021"
homepage    = "https://hack.ink/air"
license     = "GPL-3.0"
name        = "air"
readme      = "README.md"
repository  = "https://github.com/hack-ink/air"
version     = "0.4.9"

[package.metadata.bundle]
icon              = ["asset/icon.icns"]
identifier        = "ink.hack.AiR"
long_description  = "AI with Rust."
name              = "AiR"
short_description = "AI with Rust."
version           = "0.4.9"

[package.metadata.winresource]
LegalCopyright   = "Copyright (C) Hack Ink"
OriginalFilename = "air.exe"
ProductName      = "AiR"

# https://github.com/emilk/egui/issues/4807.
[profile.dev.package.egui]
debug-assertions = false

[profile.ci-dev]
incremental = false
inherits    = "dev"

[profile.ci-release]
inherits = "release"
lto      = true

[features]
default = []
dev     = []

[target.'cfg(target_os = "windows")'.build-dependencies]
winresource = { version = "0.1" }

[dependencies]
# crates.io
app_dirs2          = { version = "2.5" }
arboard            = { version = "3.4" }
async-openai       = { version = "0.25" }
color-eyre         = { version = "0.6" }
eframe             = { version = "0.29", features = ["persistence"] }
egui_extras        = { version = "0.28", features = ["svg"] }
enigo              = { version = "0.2" }
futures            = { version = "0.3" }
global-hotkey      = { version = "0.6" }
language           = { version = "0.1", features = ["serde"] }
parking_lot        = { version = "0.12" }
reqwew             = { version = "0.2" }
rodio              = { version = "0.20" }
serde              = { version = "1.0", features = ["derive"] }
thiserror          = { version = "1.0" }
tokio              = { version = "1.41", features = ["rt-multi-thread"] }
toml               = { version = "0.8" }
tracing            = { version = "0.1" }
tracing-appender   = { version = "0.2" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2            = { version = "0.5" }
objc2-app-kit    = { version = "0.2", features = ["NSApplication", "NSResponder", "NSRunningApplication", "NSWindow"] }
objc2-foundation = { version = "0.2" }
# accessibility     = { version = "0.1" }
# accessibility-sys = { version = "0.1" }
# core-foundation   = { version = "0.9" }

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3" }

[patch.crates-io]
# async-openai = { path = "tmp/async-openai/async-openai" }
# egui = { path = "tmp/egui/crates/egui" }
